--- a/style.css
+++ b/style.css
@@ -5,61 +5,63 @@ body {
   font-family: "lato", sans-serif;
 }
 
-.aaa {
+.eisenhower-block {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.eisenhower-block__img {
   width: 100%;
 }
 
-.aaa .more_inf {
+.eisenhower-block__href {
   font-family: fantasy, cursive;
 }
   
 @media (max-width:768px) {
   
-  .aaa { 
+  .eisenhower-block { 
     text-align: center;
   }
   
 }
 
-.centered-main-page-element {
+.todo-list {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
 
-.task {
+.todo-list__input-text,
+.todo-list__label {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
 
-.task-row-wrapper {
+.add-item-wrapper {
   display: flex;
 }
 
-ul {
+.in-complete-tasks,
+.completed-tasks {
   margin: 0;
   padding: 0px;
 }
 
-li, 
-h3 {
+.todo-list__li, 
+.todo-list__heading {
   list-style: none;
 }
 
-input,
-button {
+.todo-list__input,
+.todo-list__button {
   outline: none;
 }
 
-button {
+.todo-list__button {
   background: none;
   border: 0px;
   color: #888;
@@ -69,13 +71,13 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.todo-list__button:hover {
   color: #3a3a3a;
 }
 
 /* Heading */
-h3,
-label[for="new-task"] {
+.todo-list__heading,
+.todo-list__label[for="new-task"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -85,7 +87,7 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.todo-list__input-text {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -98,22 +100,22 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.todo-list__input-text:focus {
   color: #333;
 }
   
 /* New Task */
-label[for="new-task"] {
+.todo-list__label[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+.todo-list__input#new-task {
   width: 318px;
 }
   
 /* Task list */
-li {
+.todo-list__li {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -122,52 +124,53 @@ li {
   align-items: center;
 }
 
-li > * {
+.todo-list__li > * {
   vertical-align: middle;
 }
   
-li > input[type="checkbox"] {
+.todo-list__li > .todo-list__input-checkbox {
   margin: 0 10px;
 }
 
-li > label {
+.todo-list__li > .todo-list__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li > input[type="text"] {
+.todo-list__li > .todo-list__input-text {
   width: 226px;
 }
 
-button.delete img {
+.todo-list__button.delete .todo-list__img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.todo-list__button.delete .todo-list__img:hover {
   transform: rotateZ(0);
 }
   
 /* Completed */
-ul#completed-tasks label {
+.completed-tasks .todo-list__label {
   text-decoration: line-through;
   color: #888;
 }
   
 /* Edit Task */
-ul li input[type="text"] {
+.in-complete-tasks .todo-list__input-text,
+.completed-tasks .todo-list__input-text {
   display: none;
 }
   
-ul li.editMode input[type="text"] {
+.edit-mode .todo-list__input-text {
   display: inline-block;
   width: 224px;
 }
   
-ul li.editMode label {
+.edit-mode .todo-list__label {
   display: none;
 }
   
