--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ body {
 .aaa .more_inf {
   font-family: fantasy, cursive;
 }
-
 @media (max-width:768px) {
   .aaa { text-align: center;
 }
@@ -54,7 +53,7 @@ button {
   cursor: pointer;
 }
 button:hover {
-  color: #3a3A3a;
+  color: #3a3a3a;
 }
 /* Heading */
 h3,
@@ -73,8 +72,8 @@ input[type="text"] {
   line-height: 18px;
   height: 21px;
   padding: 0 9px;
-  border: 1px solid #dDd;
-  background: #FFF;
+  border: 1px solid #ddd;
+  background: #fff;
   border-radius: 6px;
   font-family: Lato, sans-serif;
   color: #888;
@@ -82,7 +81,6 @@ input[type="text"] {
 input[type="text"]:focus {
   color: #333;
 }
-
 /* New Task */
 label[for='new-task'] {
   display: block;
@@ -91,13 +89,11 @@ label[for='new-task'] {
 input#new-task {
   width: 318px;
 }
-
 /* Task list */
 li {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -105,7 +101,6 @@ li {
 li > * {
   vertical-align: middle;
 }
-
 li > input[type="checkbox"] {
   margin: 0 10px;
 }
@@ -126,23 +121,19 @@ button.delete img {
 button.delete img:hover {
   transform: rotateZ(0);
 }
-
 /* Completed */
 ul#completed-tasks label {
   text-decoration: line-through
   color: #888;
 }
-
 /* Edit Task */
 ul li input[type=text] {
   display:none
 }
-
 ul li.editMode input[type=text] {
   display:inline-block;
   width:224px
 }
-
 ul li.editMode label {
   display:none;
 }
