--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   background-color: #f8f8f8;
   color: #333;
-  font-family: Lato, sans-serif;
+  font-family: "lato", sans-serif;
 }
 .aaa {
   width: 500px;
@@ -49,7 +49,7 @@ button {
   color: #888;
   font-size: 15px;
   width: 60px;
-  font-family: Lato, sans-serif;
+  font-family: "lato", sans-serif;
   cursor: pointer;
 }
 button:hover {
@@ -57,7 +57,7 @@ button:hover {
 }
 /* Heading */
 h3,
-label[for='new-task'] {
+label[for="new-task"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -75,14 +75,15 @@ input[type="text"] {
   border: 1px solid #ddd;
   background: #fff;
   border-radius: 6px;
-  font-family: Lato, sans-serif;
+  font-family: "lato", sans-serif;
   color: #888;
 }
 input[type="text"]:focus {
   color: #333;
 }
+
 /* New Task */
-label[for='new-task'] {
+label[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
@@ -126,11 +127,13 @@ ul#completed-tasks label {
   text-decoration: line-through
   color: #888;
 }
+
 /* Edit Task */
-ul li input[type=text] {
+ul li input[type="text"] {
   display:none
 }
-ul li.editMode input[type=text] {
+
+ul li.editMode input[type="text"] {
   display:inline-block;
   width:224px
 }
