--- a/style.css
+++ b/style.css
@@ -32,25 +32,22 @@ body {
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
+
 .task-row-wrapper {
   display: flex;
 }
-
 ul {
   margin: 0;
   padding: 0px;
 }
-
 li, h3 {
   list-style: none;
 }
-
 input,button{
   outline: none;
 }
-
 button {
   background: none;
   border: 0px;
@@ -121,9 +118,11 @@ li > label {
   font-size: 18px;
   width: 226px;
 }
+
 li > input[type="text"] {
-  width: 226px
+  width: 226px;
 }
+
 button.delete img {
   height: 2em;
   transform: rotateZ(45deg);
@@ -132,21 +131,21 @@ button.delete img {
 button.delete img:hover {
   transform: rotateZ(0);
 }
-  
+
 /* Completed */
 ul#completed-tasks label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 ul li input[type="text"] {
-  display: none
+  display: none;
 }
 
 ul li.editMode input[type="text"] {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 ul li.editMode label {
