--- a/style.css
+++ b/style.css
@@ -34,7 +34,6 @@ body {
   display: inline-block;
   flex-grow: 1;
 }
-
 .task-row-wrapper {
   display: flex;
 }
@@ -42,12 +41,17 @@ ul {
   margin: 0;
   padding: 0px;
 }
-li, h3 {
+
+li, 
+h3 {
   list-style: none;
 }
-input,button{
+
+input,
+button {
   outline: none;
 }
+
 button {
   background: none;
   border: 0px;
@@ -118,11 +122,9 @@ li > label {
   font-size: 18px;
   width: 226px;
 }
-
 li > input[type="text"] {
   width: 226px;
 }
-
 button.delete img {
   height: 2em;
   transform: rotateZ(45deg);
@@ -131,23 +133,23 @@ button.delete img {
 button.delete img:hover {
   transform: rotateZ(0);
 }
-
+  
 /* Completed */
 ul#completed-tasks label {
   text-decoration: line-through;
   color: #888;
 }
-
+  
 /* Edit Task */
 ul li input[type="text"] {
   display: none;
 }
-
+  
 ul li.editMode input[type="text"] {
   display: inline-block;
   width: 224px;
 }
-
+  
 ul li.editMode label {
   display: none;
 }
